# hhrubot

./: .gitignore  .ruff.toml  README.md  pyproject.toml
src/hhrubot/adapter/: headhunter.py  redisgram.py
src/hhrubot/api/: depends_stub.py
src/hhrubot/api/router/: default.py  internal.py  webhook.py
src/hhrubot/application/: feeder.py  headhunter.py  resume_full_model.py  resumes_mine_model.py  texpdf.py
src/hhrubot/main/: providers.py  queue.py  tg.py  web.py
src/hhrubot/queue/: tex.py
src/hhrubot/tg/callback/: resume.py
src/hhrubot/tg/middleware/: employee.py
src/hhrubot/tg/router/: echo.py  greeting.py  resume.py
