[tool.poetry]
name = "hhrubot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hhrubot", from = "src"}]

[tool.poetry.scripts]
post = "hhrubot.main:standalone"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
aiogram = "^3.4.1"
uvicorn = "^0.27.1"
dishka = "^0.4.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pylatex = "^1.4.2"
dramatiq = {extras = ["redis", "watch"], version = "^1.16.0"}
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
datamodel-code-generator = "^0.25.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C901"]
#ignore = ["Q000", "ANN101", "ANN204"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
